# DispatchTable

./: Cargo.toml  README.md
examples/: dispatch.rs
src/: core.rs  lib.rs  test.rs
