[package]
name = "dispatchtable"
version = "0.1.2"
authors = ["Skarlett <https://github.com/Skarlett>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

publish = true
description = "Small library used to specify function dispatch tables HashMap<K, Box<Fn(..)>>"

homepage = "https://github.com/Skarlett/dispatchtable"
repository = "https://github.com/Skarlett/dispatchtable"
readme = "README.md"
keywords = ["dynamic", "runtime", "dispatch", "function", "map"]
categories = ["rust-patterns", "data-structures"]
license = "MIT"

